[vr] Fix visiblity and repositioning of hosted native UI

Currently, the native UI does not align with the repositioned content
quad and is visible when the exit prompt shows. This CL fixes that.

Bug: 824812
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I12f546cb7c5fd4aba2d501443cd0205f59d714cd
Reviewed-on: https://chromium-review.googlesource.com/976182
Commit-Queue: Tibor Goldschwendt <tiborg@chromium.org>
Reviewed-by: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545464}
Former-commit-id: 0aa296ca1b6da58978c461331de754dd454a9a68